--- a/app/pages/index.njk
+++ b/app/pages/index.njk
@@ -2,6 +2,60 @@
 
 {% block content %}
 
-<h1>conteudo aqui</h1>
+<header class="header" role="banner">
+  <div class="wrapper">
+    <a href="https://www.neon.com.br/" class="logo header__logo" target="_blank">
+      <img src="../img/neon-logo-01.png" alt="" class="logo__img">
+      <img src="../img/neon-logo-02.png" alt="" class="logo__img">
+    </a>
+
+    <div class="resume header__resume">
+      <span class="resume__label">Saldo</span>
+      <span class="resume__cipher"><span class="resume__currency">{{account.currencyUILabel}}</span><span class="resume__value">{{account.balance}}</span></span>
+    </div>
+  </div>
+</header>
+
+<main class="balance" role="main">
+  <header class="balance__header">
+    <time class="balance__year" datetime="2017-10-38 20:00">{{account.extractYear}}</time>
+
+    <div class="header__welcome">Bem vindo</div>
+  </header>
+
+  <section class="balance__body">
+    <div class="balance__content">
+      <ul class="caroucel balance__carousel">
+
+        {% for extract in account.extracts %}
+        <li class="caroucel__item">
+
+          <div class="wrapper">
+            <ul class="extract balance__extract">
+
+              {% for item in extract.items %}
+              <li class="extract__item">
+                <div class="extract__label"><span>{{item.categoryUILabel}}</span></div>
+                <div class="extract__type">{{item.typeUILabel}}</div>
+                <div class="extract__cipher"><span class="extract__currency">{{account.currencyUILabel}}</span><span class="extract__value">{{item.value}}</span></div>
+
+                <div class="extract__options">
+                  <button class="extract__exlude"><span>Excluir</span></button>
+                  <button class="extract__configure"><span>Configurar</span></button>
+                </div>
+
+              </li>
+              {% endfor %}
+
+            </ul>
+          </div>
+
+        </li>
+        {% endfor %}
+
+      </ul>
+    </div>
+  </section>
+</main>
 
 {% endblock %}
