--- a/app/assets/scss/_core/_variables.scss
+++ b/app/assets/scss/_core/_variables.scss
@@ -1,8 +1,12 @@
 /* VARIABLES
 ------------------------------------------------------------------------*/
 
+/* COLORS */
+$c-neonDarkBlue: #0e5368;
+$c-neonBrightGreen: #6fedb0;
+$c-neonCyan: #28b0da;
 /* GUTTERS */
-$gutter: remify(16px);
+$gutter: remify(20px);
 
 /* BASIC BREAKPOINTS */
 $tabl-bk: remify(640px); // normal tablet
