--- a/app/components/logo/_logo.scss
+++ b/app/components/logo/_logo.scss
@@ -2,5 +2,5 @@
 ------------------------------------------------------------------------*/
 
 .logo {
-  background-color: blue;
+  display: inline-block;
 }
