--- a/app/pages/index.njk
+++ b/app/pages/index.njk
@@ -5,30 +5,34 @@
 <header class="header" role="banner">
   <div class="wrapper">
     <a href="https://www.neon.com.br/" class="logo header__logo" target="_blank">
-      <img src="../img/neon-logo-01.png" alt="" class="logo__img">
-      <img src="../img/neon-logo-02.png" alt="" class="logo__img">
+      <img src="./assets/img/neon-logo-01.png" alt="" class="logo__img hide--desktop">
+      <img src="./assets/img/neon-logo-02.png" alt="" class="logo__img hide--mobile">
     </a>
 
-    <div class="resume header__resume">
-      <span class="resume__label">Saldo</span>
-      <span class="resume__cipher"><span class="resume__currency">{{account.currencyUILabel}}</span><span class="resume__value">{{account.balance}}</span></span>
+    <div class="header__resume">
+      <span class="header__label">Saldo</span>
+      <span class="header__cipher"><span class="header__currency">{{account.currencyUILabel}}</span><span class="header__value">{{account.balance}}</span></span>
     </div>
   </div>
 </header>
 
 <main class="balance" role="main">
   <header class="balance__header">
-    <time class="balance__year" datetime="2017-10-38 20:00">{{account.extractYear}}</time>
 
-    <div class="header__welcome">Bem vindo</div>
+    <div class="wrapper">
+      <time class="balance__year" datetime="2017-10-38 20:00">{{account.extractYear}}</time>
+
+      <div class="header__welcome">Bem-vindo</div>
+    </div>
+
   </header>
 
   <section class="balance__body">
     <div class="balance__content">
-      <ul class="caroucel balance__carousel">
+      <ul class="carousel balance__carousel">
 
         {% for extract in account.extracts %}
-        <li class="caroucel__item">
+        <li class="carousel__item">
 
           <div class="wrapper">
             <ul class="extract balance__extract">
