--- a/app/assets/scss/index.scss
+++ b/app/assets/scss/index.scss
@@ -4,6 +4,18 @@
 @import "_core/normalize";
 @import "_core/base";
 
-/* COMPONENTS */
-@import "../../components/logo/logo";
 
+body {
+  background-color: $c-neonDarkBlue;
+
+  font-size: 16px;
+  color: white;
+  font-family: sans-serif;
+}
+
+
+/* COMPONENTS */
+@import "../../components/header/header";
+@import "../../components/logo/logo";
+@import "../../components/balance/balance";
+@import "../../components/carousel/carousel";
