--- a/app/assets/scss/index.scss
+++ b/app/assets/scss/index.scss
@@ -19,3 +19,4 @@ body {
 @import "../../components/logo/logo";
 @import "../../components/balance/balance";
 @import "../../components/carousel/carousel";
+@import "../../components/extract/extract";
