Carousel with snap controls + general fixtures.

--- a/app/assets/scss/_core/_variables.scss
+++ b/app/assets/scss/_core/_variables.scss
@@ -5,6 +5,7 @@
 $c-neonDarkBlue: #0e5368;
 $c-neonBrightGreen: #6fedb0;
 $c-neonCyan: #28b0da;
+$c-alienGreen: #c0e761;
 /* GUTTERS */
 $gutter: remify(20px);
 
