--- a/app/pages/index.njk
+++ b/app/pages/index.njk
@@ -65,4 +65,13 @@
   </section>
 </main>
 
+<!-- some svg blur filter -->
+<svg xmlns="http://www.w3.org/2000/svg" version="1.1" class="filters">
+    <defs>
+      <filter id="blur">
+          <feGaussianBlur id="blur-filter" in="SourceGraphic" stdDeviation="0,0" />
+      </filter>
+  </defs>
+</svg>
+
 {% endblock %}
