--- a/app/assets/scss/index.scss
+++ b/app/assets/scss/index.scss
@@ -4,15 +4,18 @@
 @import "_core/normalize";
 @import "_core/base";
 
-
+html {
+  height: 100%;
+  transform: translateZ(0);
+}
 body {
   background-color: $c-neonDarkBlue;
 
   font-size: 16px;
   color: white;
   font-family: sans-serif;
-}
 
+}
 
 /* COMPONENTS */
 @import "../../components/header/header";
