--- a/app/assets/scss/_core/_variables.scss
+++ b/app/assets/scss/_core/_variables.scss
@@ -6,6 +6,8 @@ $c-neonDarkBlue: #0e5368;
 $c-neonBrightGreen: #6fedb0;
 $c-neonCyan: #28b0da;
 $c-alienGreen: #c0e761;
+$c-peaceGreen: #c3e961;
+$c-yellow: #f5fd00;
 /* GUTTERS */
 $gutter: remify(20px);
 
