--- a/app/components/carousel/_carousel.scss
+++ b/app/components/carousel/_carousel.scss
@@ -41,6 +41,9 @@ $controlsHeight: remify(45px);
   border-radius: ($gutter / 2);
   overflow: hidden;
 
+  /* this fixes the overflow:hidden in Chrome */
+  -webkit-mask-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAIAAACQd1PeAAAAGXRFWHRTb2Z0d2FyZQBBZG9iZSBJbWFnZVJlYWR5ccllPAAAAA5JREFUeNpiYGBgAAgwAAAEAAGbA+oJAAAAAElFTkSuQmCC);
+
   max-width: remify(480px);
 
   > .wrapper {
