Parametrization of transition time + general css improvements.

--- a/app/components/balance/_balance.scss
+++ b/app/components/balance/_balance.scss
@@ -14,7 +14,7 @@ $scrollHeigth: remify(15px);
 .balance__header {
   text-align: center;
 
-  height: remify($headerHeight);
+  height: $headerHeight;
 
   //balance__year helper
   > .wrapper {
