--- a/app/components/carousel/_carousel.scss
+++ b/app/components/carousel/_carousel.scss
@@ -9,7 +9,7 @@ $controlsHeight: remify(45px);
   // margin: 0 -($gutter);
 
   position: relative;
-  height: calc(100%);
+  height: 100%;
 
   padding-bottom: $controlsHeight;
 
