--- a/app/components/balance/_balance.scss
+++ b/app/components/balance/_balance.scss
@@ -53,9 +53,13 @@ $scrollHeigth: remify(15px);
 
   padding: ($gutter / 2);
 
+  &:before,
   &:after {
     @extend .pseudo;
     position: absolute;
+  }
+
+  &:after {
     bottom: 0;
     left: 0;
     right: 0;
@@ -67,16 +71,14 @@ $scrollHeigth: remify(15px);
   }
 
   &:before {
-    @extend .pseudo;
-    position: absolute;
     z-index: 5;
     bottom: 0;
     left: 50%;
 
     height: 1px;
-    width: 20px;
+    width: 5px;
 
-    background-color: white;
+    background-color: rgba(255,255,255, .5);
 
     animation: robotMouth 1.5s linear infinite alternate;
   }
@@ -134,6 +136,6 @@ $scrollHeigth: remify(15px);
 
 @keyframes robotMouth {
     0% { left: 0; }
-    50% { box-shadow: 0 0 2px 0px white; }
+    50% { box-shadow: 0 0 2px 0px white; width: 30px;}
     100% { left: 100%; }
 }
